popup position Safari fix

--- a/css/style.css
+++ b/css/style.css
@@ -560,7 +560,7 @@ svg > #TwoBiltmoreEstates + foreignObject {
     y:400;
 }
 svg > #BiltmoreSquare + foreignObject .popup {
-    left:var(--aside-panel-width) + 290px;
+    left:var(--aside-panel-width);/*290px*/
     top:160px;
 }
 svg > #BiltmoreCourts + foreignObject {
